; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/bsnmp/snmpd/extr_export.c_oid_get.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/bsnmp/snmpd/extr_export.c_oid_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snmp_value = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.asn_oid }
%struct.asn_oid = type { i32 }

@SNMP_ERR_NOERROR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @oid_get(%struct.snmp_value* %0, %struct.asn_oid* %1) #0 {
  %3 = alloca %struct.snmp_value*, align 8
  %4 = alloca %struct.asn_oid*, align 8
  store %struct.snmp_value* %0, %struct.snmp_value** %3, align 8
  store %struct.asn_oid* %1, %struct.asn_oid** %4, align 8
  %5 = load %struct.snmp_value*, %struct.snmp_value** %3, align 8
  %6 = getelementptr inbounds %struct.snmp_value, %struct.snmp_value* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load %struct.asn_oid*, %struct.asn_oid** %4, align 8
  %9 = bitcast %struct.asn_oid* %7 to i8*
  %10 = bitcast %struct.asn_oid* %8 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %9, i8* align 4 %10, i64 4, i1 false)
  %11 = load i32, i32* @SNMP_ERR_NOERROR, align 4
  ret i32 %11
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
